GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ABS__c.field-meta.xml
<CustomField>
    <fullName>ABS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABS</label>
    <type>Checkbox</type>
</CustomField>