GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ABS_Any_Belgian_Station__c.field-meta.xml
<CustomField>
    <fullName>ABS_Any_Belgian_Station__c</fullName>
    <formula>IF(
	RIGHT(FBC__c,1)=&quot;E&quot;,
	True,
	False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABS (Any Belgian Station)</label>
    <type>Checkbox</type>
</CustomField>