GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>