GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ADS__c.field-meta.xml
<CustomField>
    <fullName>ADS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADS</label>
    <type>Checkbox</type>
</CustomField>