GearsetPOC/force-app/main/default/objects/Ticket__c/fields/After_Sale_Note__c.field-meta.xml
<CustomField>
    <fullName>After_Sale_Note__c</fullName>
    <label>After Sale Note</label>
    <type>TextArea</type>
</CustomField>