GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Age_Category__c.field-meta.xml
<CustomField>
    <fullName>Age_Category__c</fullName>
    <formula>IF(FBC__c = &quot;BFMPOPSB&quot;, &quot;Junior Traveller&quot;,
IF(LEFT(RIGHT(FBC__c,3),1) = &quot;C&quot;, &quot;Child&quot;,
IF(LEFT(RIGHT(FBC__c,3),1) = &quot;Y&quot;, &quot;Youth&quot;,
&quot;Adult&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Adult (26+ years)
Youth (12-25 years)
Children (4-11 years)</inlineHelpText>
    <label>Age Category</label>
    <type>Text</type>
</CustomField>