GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Agent_Office_Code_latest__c.field-meta.xml
<CustomField>
    <fullName>Agent_Office_Code_latest__c</fullName>
    <label>Agent Office Code (latest)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>