GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Agent_Username__c.field-meta.xml
<CustomField>
    <fullName>Agent_Username__c</fullName>
    <label>Agent Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>