GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Any_ABS_ADS_TCN__c.field-meta.xml
<CustomField>
    <fullName>Any_ABS_ADS_TCN__c</fullName>
    <label>Any ABS/ADS TCN</label>
    <length>250</length>
    <type>Text</type>
</CustomField>