GearsetPOC/force-app/main/default/objects/Ticket__c/fields/api_submitted__c.field-meta.xml
<CustomField>
    <fullName>api_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>api_submitted</label>
    <type>Checkbox</type>
</CustomField>