GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Arrival_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Arrival_DateTime__c</fullName>
    <externalId>true</externalId>
    <label>Arrival DateTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>