GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Arrival_Retimed__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Retimed__c</fullName>
    <formula>IF( ISBLANK(Original_Arrival_DateTime__c), false, IF( Arrival_DateTime__c=Original_Arrival_DateTime__c, false,true))</formula>
    <label>Arrival Retimed?</label>
    <type>Checkbox</type>
</CustomField>