GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Assistance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assistance_Notes__c</fullName>
    <label>Assistance Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>