GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Booking_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Booking_DateTime__c</fullName>
    <description>Booking DateTime</description>
    <externalId>true</externalId>
    <label>Booking DateTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>