GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Booking_DateTime_Format__c.field-meta.xml
<CustomField>
    <fullName>Booking_DateTime_Format__c</fullName>
    <formula>DATETIMEVALUE
(
   MID(Booking_DateTime__c,7,4)+&quot;-&quot;+
   MID(Booking_DateTime__c,4,2)+&quot;-&quot;+
   MID(Booking_DateTime__c,1,2)+&quot; &quot;+
   MID(Booking_DateTime__c,12,8)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking DateTime (formatted)</label>
    <type>DateTime</type>
</CustomField>