GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Booking_Language__c.field-meta.xml
<CustomField>
    <fullName>Booking_Language__c</fullName>
    <label>Booking Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>