GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Booking_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sales_Channel__c</fullName>
    <externalId>true</externalId>
    <label>Booking Sales Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>