GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Train Cancelled</label>
    <type>Checkbox</type>
</CustomField>