GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Cancelled_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticket Cancelled</label>
    <type>Checkbox</type>
</CustomField>