GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Cancelled_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_DateTime__c</fullName>
    <description>Cancelled DateTime</description>
    <label>Cancelled DateTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>