GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Cancelled_Description__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Description__c</fullName>
    <label>Cancelled Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>