GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Carrier_Flag__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Flag__c</fullName>
    <formula>IF(TEXT(Carrier__c) = &quot;Blue&quot;, &quot;London &quot;,
IF(TEXT(Carrier__c) = &quot;Red&quot;, &quot;Continental &quot;,
IF(TEXT(Carrier__c) = &quot;Purple&quot;, &quot;Both &quot;, &quot;&quot;)
)
) +
IF(
  NOT(ISBLANK(TEXT(Carrier__c))),
  IMAGE(
    &quot;/resource/ticket/colors/tag_&quot; +
    IF(
      TEXT(Carrier__c) = &quot;Red&quot;,
      &quot;red.png&quot;,
      IF(
        TEXT(Carrier__c) = &quot;Blue&quot;,
        &quot;blue.png&quot;,
        IF(
          TEXT(Carrier__c) = &quot;Purple&quot;,
          &quot;purple.png&quot;,
          &quot;&quot;
        )
      )
    ),
    &quot;Ticket color image&quot;
  ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Flag</label>
    <type>Text</type>
</CustomField>