GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Checked_In__c.field-meta.xml
<CustomField>
    <fullName>Checked_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has passenger checked in?</description>
    <label>Checked In</label>
    <type>Checkbox</type>
</CustomField>