GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Checked_in_Method__c.field-meta.xml
<CustomField>
    <fullName>Checked_in_Method__c</fullName>
    <label>Checked-in Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL</fullName>
            </value>
            <value>
                <fullName>LIGHT</fullName>
            </value>
            <value>
                <fullName>PASSAGE</fullName>
            </value>
            <value>
                <fullName>NOSHOW</fullName>
            </value>
            <value>
                <fullName>SEAT_RELEASED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>