GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Checked_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Time__c</fullName>
    <description>Checked In DateTime</description>
    <label>Checked In Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>