GearsetPOC/force-app/main/default/objects/Ticket__c/fields/city_code__c.field-meta.xml
<CustomField>
    <fullName>city_code__c</fullName>
    <label>city_code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>