GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <label>Class of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <color>#F3D904</color>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
                <color>#339999</color>
                <label>Standard Premier</label>
            </value>
            <value>
                <fullName>Business Premier</fullName>
                <color>#2F5D85</color>
                <label>Business Premier</label>
            </value>
            <value>
                <fullName>Premium</fullName>
                <color>#FF0000</color>
                <label>Premium</label>
            </value>
            <value>
                <fullName>Comfort</fullName>
                <color>#FF9900</color>
                <label>Comfort</label>
            </value>
            <value>
                <fullName>Eurostar Premier</fullName>
            </value>
            <value>
                <fullName>Eurostar Plus</fullName>
            </value>
            <value>
                <fullName>Eurostar Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>