GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Commercial_Group__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Group__c</fullName>
    <label>Commercial Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>