GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Comp_Email_Check__c.field-meta.xml
<CustomField>
    <fullName>Comp_Email_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comp Email Check</label>
    <type>Checkbox</type>
</CustomField>