GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Compensation_Check__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Check__c</fullName>
    <formula>IMAGE( 
CASE( 
 Number_of_Compensations__c , 
0 ,&quot;/img/msg_icons/confirm16.png&quot;,
&quot;/img/msg_icons/error16.png&quot; 
),&quot;TCN Check&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Are there already any compensations attached to this ticket? If yes, it will display a red &quot;!&quot;.</inlineHelpText>
    <label>Compensation - TCN Check</label>
    <type>Text</type>
</CustomField>