GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Compensation_Delay__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation - Delay</label>
    <type>Checkbox</type>
</CustomField>