GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Compensation_language__c.field-meta.xml
<CustomField>
    <fullName>Compensation_language__c</fullName>
    <formula>CASE(Booking_Language__c, 
&#39;EN-GB&#39;, &#39;English&#39;, 
&#39;BE-EN&#39;, &#39;English&#39;,
&#39;en&#39;, &#39;English&#39;, 
&#39;EN&#39;, &#39;English&#39;,
&#39;ENGLISH&#39;, &#39;English&#39;, 
&#39;ENGLISH (UK)&#39;, &#39;English&#39;,
&#39;FR-FR&#39;, &#39;French&#39;, 
&#39;BE-FR&#39;, &#39;French&#39;,
&#39;FR&#39;, &#39;French&#39;, 
&#39;fr&#39;, &#39;French&#39;,
&#39;FRENCH&#39;, &#39;French&#39;, 
&#39;NL-NL&#39;, &#39;Dutch&#39;, 
&#39;BE-NL&#39;, &#39;Dutch&#39;,
&#39;nl&#39;, &#39;Dutch&#39;, 
&#39;NL&#39;, &#39;Dutch&#39;,
&#39;Flemish&#39;, &#39;Dutch&#39;, 
&#39;DUTCH&#39;, &#39;Dutch&#39;,
&#39;DE-DE&#39;, &#39;German&#39;, 
&#39;BE-DE&#39;, &#39;German&#39;,
&#39;de&#39;, &#39;German&#39;, 
&#39;DE&#39;, &#39;German&#39;,
&#39;GERMAN&#39;, &#39;German&#39;,  

IF(
(ISPICKVAL(Train__r.From__r.Country__c,&#39;FRA&#39;) || ISPICKVAL(Train__r.To__r.Country__c,&#39;FRA&#39;)),

&#39;French&#39;,

IF(
(ISPICKVAL(Train__r.From__r.Country__c,&#39;BEL&#39;) || ISPICKVAL(Train__r.To__r.Country__c,&#39;BEL&#39;)),

&#39;English&#39;,

IF(
(ISPICKVAL(Train__r.From__r.Country__c,&#39;NLD&#39;) || ISPICKVAL(Train__r.To__r.Country__c,&#39;NLD&#39;)),

&#39;Dutch&#39;,

IF(
(ISPICKVAL(Train__r.From__r.Country__c,&#39;DEU&#39;) || ISPICKVAL(Train__r.To__r.Country__c,&#39;DEU&#39;)),

&#39;Germany&#39;,

&#39;English&#39;
)))))</formula>
    <label>Compensation language</label>
    <type>Text</type>
</CustomField>