GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Compensation_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compensation Ticket</label>
    <referenceTo>Compensation_Ticket__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>