GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Compensation_type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_type__c</fullName>
    <formula>IF(
OR(
CONTAINS(Delay_Cause__c, &quot;availability&quot;), 
CONTAINS(Delay_Cause__c, &quot;connections&quot;),
CONTAINS(Delay_Cause__c, &quot;crew-mistake&quot;),
CONTAINS(Delay_Cause__c, &quot;driver&quot;),
CONTAINS(Delay_Cause__c, &quot;operation-control-mistake&quot;),
CONTAINS(Delay_Cause__c, &quot;passenger&quot;),
CONTAINS(Delay_Cause__c, &quot;reliability&quot;),
CONTAINS(Delay_Cause__c, &quot;special-call&quot;),
CONTAINS(Delay_Cause__c, &quot;tm&quot;)
),
&quot;PRR&amp;voucher&quot;, &quot;Voucher only&quot;)</formula>
    <label>Compensation type</label>
    <type>Text</type>
</CustomField>