GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Connecting_Destination__c.field-meta.xml
<CustomField>
    <fullName>Connecting_Destination__c</fullName>
    <formula>IF(CreatedBy.FirstName = &quot;KAFKA&quot;,Non_Eurostar_Destination__c,IF(NOT(ISBLANK(Non_Eurostar_Destination__c)),Non_Eurostar_Destination__c,

IF(ABS_Any_Belgian_Station__c=true,&quot;ABS (Any Belgian Station)&quot;,

&quot;&quot;

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connecting Destination</label>
    <type>Text</type>
</CustomField>