GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>IF(ISBLANK(ETAP_Email__c), IF(ISBLANK(Email__c), Booker__r.PersonEmail, Email__c), ETAP_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Best of ETAP Email &gt; Ticket Email &gt; Booker Email</inlineHelpText>
    <label>Contact_Email</label>
    <type>Text</type>
</CustomField>