GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Contact_Key__c.field-meta.xml
<CustomField>
    <fullName>Contact_Key__c</fullName>
    <formula>SUBSTITUTE(Contact_Phone__c,&quot; &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact Key for Marketing Cloud, no spaces</inlineHelpText>
    <label>Contact Key</label>
    <type>Text</type>
</CustomField>