GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Contact_Key_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Key_Count__c</fullName>
    <formula>NOT(ISBLANK(Contact_Key__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Key Populated</label>
    <type>Checkbox</type>
</CustomField>