GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>IF(ISBLANK(ETAP_Phone__c), IF(ISBLANK(Telephone_Number__c),  Booker__r.PersonHomePhone , Telephone_Number__c), ETAP_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Best of ETAP Phone &gt; Ticket Phone &gt; Booker Home Phone</inlineHelpText>
    <label>Contact_Phone</label>
    <type>Text</type>
</CustomField>