GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Contact_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Type__c</fullName>
    <label>Contact Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Line</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Fixed Line or Mobile</fullName>
            </value>
            <value>
                <fullName>Toll Free</fullName>
            </value>
            <value>
                <fullName>Premium Rate</fullName>
            </value>
            <value>
                <fullName>Shared Cost</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
            <value>
                <fullName>Personal Number</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
            <value>
                <fullName>UAN</fullName>
            </value>
            <value>
                <fullName>VoiceMail</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>