GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Customer_Language__c.field-meta.xml
<CustomField>
    <fullName>Customer_Language__c</fullName>
    <label>Customer Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>