GearsetPOC/force-app/main/default/objects/Ticket__c/fields/CV19__c.field-meta.xml
<CustomField>
    <fullName>CV19__c</fullName>
    <defaultValue>false</defaultValue>
    <description>temp field to identify TCNs and their Compensations to process vouchers for</description>
    <label>CV19</label>
    <type>Checkbox</type>
</CustomField>