GearsetPOC/force-app/main/default/objects/Ticket__c/fields/CVFulfilled__c.field-meta.xml
<CustomField>
    <fullName>CVFulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVFulfilled</label>
    <type>Checkbox</type>
</CustomField>