GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Delay_Actor__c.field-meta.xml
<CustomField>
    <fullName>Delay_Actor__c</fullName>
    <description>Used in Marketing Cloud by CCCs to decide whether to send a template offering e-vouchers and refund or the template offering just e-vouchers.</description>
    <formula>Train__r.Delay_Actor__c</formula>
    <label>Delay Actor</label>
    <type>Text</type>
</CustomField>