GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Delay_mins__c.field-meta.xml
<CustomField>
    <fullName>Delay_mins__c</fullName>
    <label>Delay (mins)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>