GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Delay_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Delay_Satisfaction__c</fullName>
    <formula>IF(
   ISBLANK(Booker__c),&quot;Unknown&quot;, IF(
      Delay_Satisfaction_Index__c  &gt;= 0.5, &quot;Dissatisfied&quot;, &quot;Satisfied&quot;
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay Satisfaction</label>
    <type>Text</type>
</CustomField>