GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Delay_Satisfaction_Index__c.field-meta.xml
<CustomField>
    <fullName>Delay_Satisfaction_Index__c</fullName>
    <label>Delay Satisfaction Index</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>