GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <formula>DATEVALUE(MID(Travel_DateTime__c,7,4)+&quot;-&quot;+MID(Travel_DateTime__c,4,2)+&quot;-&quot;+MID(Travel_DateTime__c,1,2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date (formatted)</label>
    <type>Date</type>
</CustomField>