GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Departure_Date_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time_Format__c</fullName>
    <formula>DATETIMEVALUE(MID(Travel_DateTime__c,7,4)+&quot;-&quot;+MID(Travel_DateTime__c,4,2)+&quot;-&quot;+MID(Travel_DateTime__c,1,2)+&quot; &quot;+MID(Travel_DateTime__c,12,8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Warning: the Time value might be not correct, as is depends on the departure timezones and the salesforce users timezones.</inlineHelpText>
    <label>Departure DateTime (formatted)</label>
    <type>DateTime</type>
</CustomField>