GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>Destination Station</description>
    <label>Destination</label>
    <length>80</length>
    <type>Text</type>
</CustomField>