GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Disney__c.field-meta.xml
<CustomField>
    <fullName>Disney__c</fullName>
    <formula>CONTAINS(LOWER(Destination__c), &#39;marne la vallee&#39;) || CONTAINS(LOWER(Destination__c), &#39;disneyland&#39;)  || 
CONTAINS(LOWER(Origin__c), &#39;marne la vallee&#39;) || CONTAINS(LOWER(Origin__c), &#39;disneyland&#39;) || 
CONTAINS(LOWER(Non_Eurostar_Destination__c), &#39;marne la vallee&#39;) || CONTAINS(LOWER(Non_Eurostar_Destination__c), &#39;disneyland&#39;) || 
CONTAINS(LOWER(Non_Eurostar_Origin__c), &#39;marne la vallee&#39;) || CONTAINS(LOWER(Non_Eurostar_Origin__c), &#39;disneyland&#39;)</formula>
    <label>Disney</label>
    <type>Checkbox</type>
</CustomField>