GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <label>Agent organisation code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>