GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Distributor_latest__c.field-meta.xml
<CustomField>
    <fullName>Distributor_latest__c</fullName>
    <label>Agent organisation code latest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>