GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Equipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Code__c</fullName>
    <description>Equipment Code</description>
    <label>Equipment Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>