GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Email__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Email__c</fullName>
    <label>ETAP_Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>