GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Email_Populated__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Email_Populated__c</fullName>
    <formula>NOT(ISBLANK(ETAP_Email__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETAP Email Populated</label>
    <type>Checkbox</type>
</CustomField>