GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Firstname__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Firstname__c</fullName>
    <label>ETAP_Firstname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>