GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Etap_info_only__c.field-meta.xml
<CustomField>
    <fullName>Etap_info_only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this ticket has only ETAP info and hence should not consider as a real ticket</description>
    <inlineHelpText>If ticked, do not consider this ticket as a valid ticket</inlineHelpText>
    <label>ETAP info only</label>
    <type>Checkbox</type>
</CustomField>