GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Last_Modified_Converted__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Last_Modified_Converted__c</fullName>
    <description>Changes ETAP_Last_Modified_Date__c from DateTime to Date</description>
    <formula>DATEVALUE( ETAP_Last_Modified_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Changes ETAP_Last_Modified_Date__c from DateTime to Date</inlineHelpText>
    <label>ETAP Last Modified Converted</label>
    <type>Date</type>
</CustomField>