GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Last_Modified_Date__c</fullName>
    <label>ETAP Last Modified Date</label>
    <type>DateTime</type>
</CustomField>