GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Last_Modified_Text__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Last_Modified_Text__c</fullName>
    <description>Changes ETAP_Last_Modified_Date__c from DateTime to Text</description>
    <formula>TEXT(DATEVALUE( ETAP_Last_Modified_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Changes ETAP_Last_Modified_Date__c from DateTime to Text</inlineHelpText>
    <label>ETAP Last Modified Text</label>
    <type>Text</type>
</CustomField>