GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Lastname__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Lastname__c</fullName>
    <label>ETAP_Lastname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>