GearsetPOC/force-app/main/default/objects/Ticket__c/fields/ETAP_Phone__c.field-meta.xml
<CustomField>
    <fullName>ETAP_Phone__c</fullName>
    <label>ETAP_Phone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>