GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Exchanged_TCN__c.field-meta.xml
<CustomField>
    <fullName>Exchanged_TCN__c</fullName>
    <label>Exchanged TCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>