GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FBC__c.field-meta.xml
<CustomField>
    <fullName>FBC__c</fullName>
    <label>FBC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>