GearsetPOC/force-app/main/default/objects/Ticket__c/fields/Form_OF_Payment__c.field-meta.xml
<CustomField>
    <fullName>Form_OF_Payment__c</fullName>
    <label>Form of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>