GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>FPU_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this customer eligible to a FPU ?</description>
    <label>FPU Eligibility</label>
    <type>Checkbox</type>
</CustomField>