GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Live_Availability__c.field-meta.xml
<CustomField>
    <fullName>FPU_Live_Availability__c</fullName>
    <formula>Train__r.FPU_Availability__c - Train__r.Redeemed_FPUs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPU_Live_Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>