GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>FPU_Offered_Date__c</fullName>
    <label>FPU Offered Date</label>
    <type>Date</type>
</CustomField>