GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_offered_populated__c.field-meta.xml
<CustomField>
    <fullName>FPU_offered_populated__c</fullName>
    <formula>IF(
OR(
FPU_Redemption__c=True,
FPU_Eligibility__c=True
),&#39;offered&#39;,
&#39;not offered&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPU offered out of all the tickets</label>
    <type>Text</type>
</CustomField>