GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Price__c.field-meta.xml
<CustomField>
    <fullName>FPU_Price__c</fullName>
    <description>Price of a FPU for this ticket.</description>
    <label>FPU Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>