GearsetPOC/force-app/main/default/objects/Ticket__c/fields/FPU_Price_Updated_Time__c.field-meta.xml
<CustomField>
    <fullName>FPU_Price_Updated_Time__c</fullName>
    <label>FPU_Price Updated Time</label>
    <type>DateTime</type>
</CustomField>